<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rotation="0"
    android:rotationX="0"
    android:rotationY="0"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mainTextField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/all_seats_are_free"
        android:textColor="#00FF00"
        android:textSize="30sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/countField"
        android:textSize="80sp" />

    <Button
        android:id="@+id/minusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="18dp"
        android:text="@string/minusButton"
        android:enabled="false"
        android:textSize="40sp" />

    <Button
        android:id="@+id/plusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:padding="18dp"
        android:text="@string/plusButton"
        android:textSize="40sp" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:paddingLeft="40dp"
        android:paddingTop="40dp"
        android:paddingRight="40dp"
        android:paddingBottom="40dp"
        android:text="@string/resetButton"
        android:textSize="24sp"
        android:visibility="invisible" />

</FrameLayout>